--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,7 +4,7 @@
 @import "modules/hello.scss";
 
 body {
-  background: $wtf;
+  background: rgb(59, 170, 255);
   color: #fff;
   display: flex;
   align-items: center;
