--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,7 +7,61 @@ body {
   background: rgb(59, 170, 255);
   color: #fff;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  font-family: "Roboto", sans-serif;
+}
+
+.hello__logo {
+  height: 400px;
+  margin-bottom: 250px;
+  z-index: 2;
+}
+
+.header {
+  margin-bottom: 70px;
+  font-size: 50px;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+  margin-top: -230px;
+}
+
+.button_add {
+  padding: 10px;
+  width: 180px;
+  color: black;
+  font-size: 18px;
+  border-radius: 3px;
+  background-color: #fff;
+  border: none;
+  font-weight: bold;
+  &:hover{
+    background-color: rgb(219, 240, 255);
+  }
+}
+
+.button_delete {
+  margin-top: 15px;
+  width: 180px;
+  padding: 10px;
+  color: white;
+  background-color: rgba(128, 128, 128, 0);
+  border: none;
+  font-size: 14px;
+  &:hover {
+    color: rgb(219, 240, 255);
+  }
+}
+
+.counter{
+  z-index: 3;
+  position: absolute;
+  color: #000;
+  font-size: 112px;
+  margin-bottom: 20px;
 }
