Create counter, buttons and rebuild css and html

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,7 +4,7 @@
 @import "modules/hello.scss";
 
 body {
-  background: rgb(59, 170, 255);
+  background: #3baaff;
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -16,22 +16,20 @@ body {
 
 .hello__logo {
   height: 400px;
-  margin-bottom: 250px;
   z-index: 2;
 }
 
 .header {
-  margin-bottom: 70px;
   font-size: 50px;
 }
 
 .buttons {
   display: flex;
   flex-direction: column;
-  margin-top: -230px;
+  margin-top: 20px;
 }
 
-.button_add {
+.button__add {
   padding: 10px;
   width: 180px;
   color: black;
@@ -45,7 +43,7 @@ body {
   }
 }
 
-.button_delete {
+.button__remove {
   margin-top: 15px;
   width: 180px;
   padding: 10px;
@@ -58,10 +56,12 @@ body {
   }
 }
 
-.counter{
-  z-index: 3;
+.glass__counter{
+  margin-top: 150px;
+  margin-left: -35px;
+  font-size: 130px;
   position: absolute;
-  color: #000;
-  font-size: 112px;
-  margin-bottom: 20px;
+  display:block;
+  z-index: 3;
+  color: black;
 }
